Updated theme for posts and homepage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<head>
+  <link rel="stylesheet" type="text/css" href="../resources/spacelab-css-min.css">
+</head>
 
 <div class="home">
 
